--- a/.github/workflows/CreateFile.yml
+++ b/.github/workflows/CreateFile.yml
@@ -13,11 +13,11 @@ jobs:
             echo  "Branch Name: ${{ github.ref }}" > textFile1.txt
             echo "Run Url:${{ github.repository }}" >> textFile1.txt
        - name: Pulish text file
-         run: cp textFile1.txt
+         run: cp textFile1.txt/$GITHUB_WORKSPACE
   Access_text_file:
      needs: Create_text_file
      runs-on: ubuntu-latest
      steps:
        - name: Display Text File Content
-         run: cat textFile1.txt
+         run: cat textFile1.txt/$GITHUB_WORKSPACE
      
