--- a/.github/workflows/Push_Branches.yml
+++ b/.github/workflows/Push_Branches.yml
@@ -3,8 +3,8 @@ on:
     types:
       - opened
     branches:
-      - 'releases/**'
-      - 'fix/**'
+      - 'releases-**'
+      - 'fix-**'
 jobs:
   Push-Opened:
     runs-on: ubuntu-latest
